<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DC267F"
            android:fontFamily="@font/roboto_medium"
            android:padding="20dp"
            android:text="@string/header_title"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:textColor="@color/black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/header_distance"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <EditText
                    android:textColor="#DC267F"
                    android:textSize="18dp"
                    android:id="@+id/edit_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/subtitle_total_km"
                    android:textAlignment="textStart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/header_price"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToOutline="true"
                    android:inputType="numberDecimal"
                    android:textColor="#DB267F"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/subtitle_price"
                    android:textAlignment="textStart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/header_authonomy"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <EditText
                    android:textColor="#DC267F"
                    android:textSize="18dp"
                    android:id="@+id/edit_authonomy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/subtitle_authonomy"
                    android:textAlignment="textStart" />

                <Button
                    android:id="@+id/button_calculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="60dp"
                    android:layout_marginBottom="40dp"
                    android:background="#DC267F"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="10dp"
                    android:text="@string/button_calculate"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    app:backgroundTint="@null" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:alpha="20"
                    android:background="#32DC267F"
                    android:orientation="vertical"
                    android:paddingVertical="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/title_total_cost"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text_total_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:padding="10dp"
                        android:text="@string/total_cost"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="36sp" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>